tests/semantic/valid/44_t_overload_types.hulk
function f(x:Number) => x + 1;
function f(x:String, y:String) => x @ " " @ y;
print(f(5));
