tests/semantic/invalid/57_t_function_body_mismatch.hulk
function add_one(x:Number):String => x + 1;
print(add_one(5));
